--- a/appinstallerlist.html
+++ b/appinstallerlist.html
@@ -4,6 +4,7 @@
 		<title>Portableapps 高速下载</title>
 	</head>
 	<body>
+		<a href="index.html">返回主页</a>
 		<h1>文件列表</h1>
       <h2>目前有11种软件！</h2>
 		<ul>
