--- a/appinstallerlist.html
+++ b/appinstallerlist.html
@@ -1,13 +1,13 @@
 <html>
    <head>
       <meta charset="UTF-8">
-		<title>Portableapps 高速下载</title>
-	</head>
-	<body>
-		<a href="index.html">返回主页</a>
-		<h1>文件列表</h1>
-      <h2>目前有11种软件！</h2>
-		<ul>
+      <title>Portableapps 高速下载</title>
+   </head>
+   <body>
+      <a href="index.html">返回主页</a>
+      <h1>文件列表</h1>
+      <h2>目前有21种软件！</h2>
+      <ul>
          <li><a href="https://ilmc.lanzout.com/ivXiy0iw8i8f">YUMI-UEFIPortable_0.0.4.6_English.paf.exe</a><br><p>密码：54yi</p></li>
          <li><a href="https://ilmc.lanzout.com/iLKsn0iw8i1i">ZSoftUninstallerPortable_2.5_Rev_3.paf.exe</a><br><p>密码：caf9</p></li>
          <li><a href="https://ilmc.lanzout.com/isU9k0iw8hxe">ZintPortable_2.11.1_English.paf.exe</a><br><p>密码：40zx</p></li>
@@ -20,6 +20,16 @@
          <li><a href="https://ilmc.lanzout.com/idwQW0iw88tg">ScreenToGifPortable_2.37.1.paf.exe</a><br><p>密码：hct0</p></li>
          <li><a href="https://ilmc.lanzout.com/ijPyl0iw85ji">RufusPortable_3.21.paf.exe</a><br><p>密码：35d0</p></li>
          <li><a href="https://ilmc.lanzout.com/iX2rq0iw852b">ResourceHackerPortable_5.1.8_English.paf.exe</a><br><p>密码：dpqp</p></li>
+         <li><a href="https://ilmc.lanzout.com/iama00iw84sb">YUMIPortable_2.0.9.4_English.paf.exe</a><br><p>密码：b226</p></li>
+         <li><a href="https://ilmc.lanzout.com/iXmoB0iw84fi">YUMI-exFATPortable_1.0.0.7_English.paf.exe</a><br><p>密码：8yc9</p></li>
+         <li><a href="https://ilmc.lanzout.com/i9ueI0iw83eb">xpyPortable_1.3.8.paf.exe</a><br><p>密码：3g22</p></li>
+         <li><a href="https://ilmc.lanzout.com/iDkRH0iw83bi">XAMPP_1.7.paf.exe</a><br><p>密码：1b0m</p></li>
+         <li><a href="https://ilmc.lanzout.com/isZ3o0iw832j">WindowsErrorLookupToolPortable_3.0.7_English.paf.exe</a><br><p>密码：fs8p</p></li>
+         <li><a href="https://ilmc.lanzout.com/ihWKr0iw82qh">WhyNotWin11Portable_2.5.0.3.paf.exe</a><br><p>密码：ds0k</p></li>
+         <li><a href="https://ilmc.lanzout.com/iM7Rj0iw82ef">uTorrentPortable_3.5.5.46348_<b>online</b>.paf.exe</a><br><p>密码：662o</p></li>
+         <li><a href="https://ilmc.lanzout.com/iCxQT0iw81qb">uGetPortable_2.2.3-2.paf.exe</a><br><p>密码：477x</p></li>
+         <li><a href="https://ilmc.lanzout.com/iSHr80iw810f">TyperTaskPortable_1.20_Rev_3_English.paf.exe</a><br><p>密码：eon9</p></li>
+         <li><a href="https://ilmc.lanzout.com/iVlZ20iw7uxg">PNotesPortable_9.3.0.paf.exe</a><br><p>密码：4v5b</p></li>
       </ul>
    </body>
 </html>
