--- a/appinstallerlisten.html
+++ b/appinstallerlisten.html
@@ -20,6 +20,16 @@
          <li><a href="https://ilmc.lanzout.com/idwQW0iw88tg">ScreenToGifPortable_2.37.1.paf.exe</a><br><p>Password：hct0</p></li>
          <li><a href="https://ilmc.lanzout.com/ijPyl0iw85ji">RufusPortable_3.21.paf.exe</a><br><p>Password：35d0</p></li>
          <li><a href="https://ilmc.lanzout.com/iX2rq0iw852b">ResourceHackerPortable_5.1.8_English.paf.exe</a><br><p>Password：dpqp</p></li>
+	 <li><a href="https://ilmc.lanzout.com/iama00iw84sb">YUMIPortable_2.0.9.4_English.paf.exe</a><br><p>Password：b226</p></li>
+         <li><a href="https://ilmc.lanzout.com/iXmoB0iw84fi">YUMI-exFATPortable_1.0.0.7_English.paf.exe</a><br><p>Password：8yc9</p></li>
+         <li><a href="https://ilmc.lanzout.com/i9ueI0iw83eb">xpyPortable_1.3.8.paf.exe</a><br><p>Password：3g22</p></li>
+         <li><a href="https://ilmc.lanzout.com/iDkRH0iw83bi">XAMPP_1.7.paf.exe</a><br><p>Password：1b0m</p></li>
+         <li><a href="https://ilmc.lanzout.com/isZ3o0iw832j">WindowsErrorLookupToolPortable_3.0.7_English.paf.exe</a><br><p>Password：fs8p</p></li>
+         <li><a href="https://ilmc.lanzout.com/ihWKr0iw82qh">WhyNotWin11Portable_2.5.0.3.paf.exe</a><br><p>Password：ds0k</p></li>
+         <li><a href="https://ilmc.lanzout.com/iM7Rj0iw82ef">uTorrentPortable_3.5.5.46348_<b>online</b>.paf.exe</a><br><p>Password：662o</p></li>
+         <li><a href="https://ilmc.lanzout.com/iCxQT0iw81qb">uGetPortable_2.2.3-2.paf.exe</a><br><p>Password：477x</p></li>
+         <li><a href="https://ilmc.lanzout.com/iSHr80iw810f">TyperTaskPortable_1.20_Rev_3_English.paf.exe</a><br><p>Password：eon9</p></li>
+         <li><a href="https://ilmc.lanzout.com/iVlZ20iw7uxg">PNotesPortable_9.3.0.paf.exe</a><br><p>Password：4v5b</p></li>
       </ul>
    </body>
 </html>
